# Cargo.toml

[package]
name = "wgpu-texture-mapping"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck = "1.20.0"
cfg-if = "1"
env_logger = "0.10"
glam = "0.29.2"
image = "0.24"
log = "0.4"
pollster = "0.3"
png = "0.17"
wgpu = "22.0"
winit = { version = "0.29", features = ["rwh_05"] }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0"
wgpu = { version = "22.0", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
]}
